Fix the article container view on small tablets.

--- a/themes/bet_online/sass/mixins/_mixin-article-containers.scss
+++ b/themes/bet_online/sass/mixins/_mixin-article-containers.scss
@@ -7,13 +7,13 @@
       min-width: 100%;
       min-height: 100%;
 
-      // @include small-tablet {
-      //   grid-row: 1;
-      //   grid-column: 1 / 3;
-      //   min-width: 100%;
-      //   min-height: 100%;
-      //   max-height: 600px;
-      // }
+      @include small-tablet {
+        grid-row: 1;
+        grid-column: 1;
+        min-width: 100%;
+        min-height: 100%;
+        max-height: 600px;
+      }
 
       @include tablet {
         grid-row: 1 / 3;
@@ -30,13 +30,13 @@
       min-width: 100%;
       min-height: 100%;
 
-      // @include small-tablet {
-      //   grid-row: 2;
-      //   grid-column: 1 / 2;
-      //   min-width: 100%;
-      //   min-height: 100%;
-      //   max-height: 600px;
-      // }
+      @include small-tablet {
+        grid-row: 1;
+        grid-column: 2;
+        min-width: 100%;
+        min-height: 100%;
+        max-height: 600px;
+      }
       @include tablet {
         grid-row: 1;
         grid-column: 2 / 4;
@@ -52,13 +52,13 @@
       min-width: 100%;
       min-height: 100%;
 
-      // @include small-tablet {
-      //   grid-row: 3;
-      //   grid-column: 1 / 2;
-      //   min-width: 100%;
-      //   min-height: 100%;
-      //   max-height: 600px;
-      // }
+      @include small-tablet {
+        grid-row: 2;
+        grid-column: 1;
+        min-width: 100%;
+        min-height: 100%;
+        max-height: 600px;
+      }
       @include tablet {
         grid-row: 2;
         grid-column: 2;
@@ -74,13 +74,13 @@
       min-width: 100%;
       min-height: 100%;
 
-      // @include small-tablet {
-      //   grid-row: 3;
-      //   grid-column: 2 / 3;
-      //   min-width: 100%;
-      //   min-height: 100%;
-      //   max-height: 600px;
-      // }
+      @include small-tablet {
+        grid-row: 2;
+        grid-column: 2;
+        min-width: 100%;
+        min-height: 100%;
+        max-height: 600px;
+      }
       @include tablet {
         grid-row: 2;
         grid-column: 3;
